// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/HintToast should match snapshot for full width 1`] = `
<div
  className="hint-toast hint-toast--expanded"
>
  <div
    className="hint-toast__message"
  >
    A hint
  </div>
  <div
    className="hint-toast__dismiss"
    data-testid="dismissHintToast"
    onClick={[Function]}
  >
    <CloseIcon
      className="close-btn"
      id="dismissHintToast"
    />
  </div>
</div>
`;

exports[`components/HintToast should match snapshot for regular width 1`] = `
<div
  className="hint-toast"
>
  <div
    className="hint-toast__message"
  >
    A hint
  </div>
  <div
    className="hint-toast__dismiss"
    data-testid="dismissHintToast"
    onClick={[Function]}
  >
    <CloseIcon
      className="close-btn"
      id="dismissHintToast"
    />
  </div>
</div>
`;
